# discord_annoyance

./: .dockerignore  Cargo.toml  Containerfile  example.json
.github/workflows/: publish.yaml
src/: main.rs
